# coursework_project

./: README.md  pyproject.toml  requirements.txt
src/: api.py  conector.py  func.py  main.py  vacancy.py
test_code/: test_api.py  test_conector.py  test_vacancy.py
