[tool.poetry]
name = "coursework-project"
version = "0.1.0"
description = ""
authors = ["Vadim <vdmkonshin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
pytest = "^8.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

